<resources>
    <string name="app_name">TodoApp</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="log_in">Log in</string>
    <string name="back">Back</string>
    <string name="fullname">Fullname</string>
    <string name="email">Email</string>
    <string name="create">Create</string>
    <string name="group">Group</string>
    <string name="tasks">Tasks</string>
    <string name="members">Members</string>
    <string name="invite">Invite</string>
    <string name="important">Important</string>
    <string name="crucial">Crucial</string>
    <string name="regular">Regular</string>
    <string name="label">Label</string>
    <string name="select">Select</string>
    <string name="search_place">Search place</string>
    <string name="not_selected">Not selected</string>
    <string name="group_name">Group name</string>
    <string name="description">Description</string>
    <string name="join_code_optional">Join code (optional)</string>
    <string name="Choose">Choose</string>
    <string name="location">Location</string>
    <string name="assignee">Assignee</string>
    <string name="checklist">Checklist</string>
    <string name="add_detail">Add %1$s</string>
    <string name="remove_detail">Remove %1$s</string>
    <string name="join">Join</string>
    <string name="finish">Finish</string>
    <string name="all">All</string>
    <string name="mine">Mine</string>
    <string name="owned">Owned</string>
    <string name="show_map">Show Map</string>
    <string name="add_item">Add item</string>
</resources>