<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <fragment
        class="com.google.android.gms.maps.SupportMapFragment"
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/btSelectPlace"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select"
        android:layout_marginHorizontal="60dp"
        android:layout_marginBottom="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        style="@style/WhiteOutlinedButton"/>


    <Button
        android:id="@+id/btMapBack"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="8dp"
        android:textSize="12sp"
        style="@style/WhiteOutlinedButton"
        android:text="@string/back"/>

    <Button
        android:id="@+id/btMapSearch"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_margin="8dp"
        android:paddingHorizontal="12dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="16sp"
        style="@style/WhiteOutlinedButton"
        android:text="@string/search_place"/>

</androidx.constraintlayout.widget.ConstraintLayout>