<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/light_blue">

    <Button
        android:id="@+id/btBack"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="12sp"
        style="@style/WhiteOutlinedButton"
        android:text="@string/back"/>

    <ImageView
        android:id="@+id/ivRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="0dp"
        android:src="@mipmap/ic_launcher_round"
        android:layout_height="120dp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/iplFullname"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/iplFullname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/ivRegister"
        app:layout_constraintBottom_toTopOf="@id/iplUsername"
        android:theme="@style/WhiteTextLabel"
        android:layout_marginHorizontal="40dp">
    <EditText
        android:id="@+id/etRegFullname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/fullname"
        style="@style/LightBlueEditText"
        android:inputType="text"
        android:importantForAutofill="no" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/iplUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/iplFullname"
        app:layout_constraintBottom_toTopOf="@id/iplEmail"
        android:theme="@style/WhiteTextLabel"
        android:layout_marginHorizontal="40dp">
        <EditText
            android:id="@+id/etRegUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/LightBlueEditText"
            android:hint="@string/username"
            android:inputType="text"
            android:importantForAutofill="no"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/iplEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/iplUsername"
        app:layout_constraintBottom_toTopOf="@id/iplPassword"
        android:theme="@style/WhiteTextLabel"
        android:layout_marginHorizontal="40dp">
        <EditText
            android:id="@+id/etRegEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/LightBlueEditText"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:importantForAutofill="no"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/iplPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/iplEmail"
        app:layout_constraintBottom_toTopOf="@id/iplRepeatPassword"
        android:theme="@style/WhiteTextLabel"
        android:layout_marginHorizontal="40dp">
        <EditText
            android:id="@+id/etRegPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            style="@style/LightBlueEditText"
            android:inputType="textPassword"
            android:importantForAutofill="no"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/iplRepeatPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/iplPassword"
        app:layout_constraintBottom_toTopOf="@id/btRegister"
        android:theme="@style/WhiteTextLabel"
        android:layout_marginHorizontal="40dp">
        <EditText
            android:id="@+id/etRegRepeatPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            style="@style/LightBlueEditText"
            android:inputType="textPassword"
            android:importantForAutofill="no"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btRegister"
        android:text="@string/register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="60dp"
        app:layout_constraintTop_toBottomOf="@id/iplRepeatPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        style="@style/LightBlueOutlinedButton"
        />
</androidx.constraintlayout.widget.ConstraintLayout>