<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">

    <FrameLayout
        android:id="@+id/flLogoHolder"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/iplGroupDescription"
        android:background="@color/light_blue"
        />
    
    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="1:1"
        android:layout_marginHorizontal="80dp"
        android:layout_marginBottom="30dp"
        android:padding="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/iplGroupDescription"
        android:src="@mipmap/ic_launcher"
        />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/iplGroupDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        app:layout_constraintTop_toBottomOf="@id/ivLogo"
        app:layout_constraintBottom_toTopOf="@id/iplPassword"
        android:theme="@style/LightBlueTextLabel">

        <EditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:inputType="text"
            style="@style/WhiteEditText"/>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/iplPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/iplGroupDescription"
        app:layout_constraintBottom_toTopOf="@id/btLogin"
        android:layout_marginHorizontal="40dp"
        android:theme="@style/LightBlueTextLabel">
        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            style="@style/WhiteEditText"/>

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/btLogin"
        android:text="@string/log_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        app:layout_constraintTop_toBottomOf="@id/iplPassword"
        app:layout_constraintBottom_toTopOf="@id/btCreate"
        style="@style/LightBlueButton"
        />

    <Button
        android:id="@+id/btCreate"
        android:text="@string/register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginHorizontal="60dp"
        app:layout_constraintTop_toBottomOf="@id/btLogin"
        app:layout_constraintBottom_toBottomOf="parent"
        style="@style/WhiteOutlinedButton"
        />





</androidx.constraintlayout.widget.ConstraintLayout>